Replace live/running Runfield game on Firefox Features and Performance pages with a video preview/link (Bug 661285)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@90959 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/features.css
+++ b/style/covehead/features.css
@@ -352,7 +352,7 @@ img.right {
 }
 
 #highperformance .column1 {
-    width: 260px;
+    width: 233px;
 }
 
 #runfield {
@@ -363,6 +363,31 @@ img.right {
     box-shadow: 0 0 20px rgba(0,0,0,0.2);
     margin-top: 10px;
     margin-bottom: 20px;
+}
+
+#video-wrapper {
+    float: right;
+    display: inline;
+    padding: 15px;
+    margin: 10px 0 20px 0;
+    border: 1px solid #c9ddf2;
+    -moz-box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
+    -webkit-box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
+    box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    background: -moz-linear-gradient(top, #FFFFFF 0%, #F5F9FD 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F5F9FD)); /* webkit */
+    background: linear-gradient(top, #FFFFFF 0%, #F5F9FD 100%); /* firefox */
+}
+
+#video-wrapper p {
+    margin: 8px 0 0 0;
+}
+
+#video-player {
+    width: 640px;
 }
 
 
