--- a/style/covehead/performance.css
+++ b/style/covehead/performance.css
@@ -212,6 +212,31 @@
 /* }}} */
 /* {{{ Runfield */
 
+#video-wrapper {
+    float: left;
+    display: inline;
+    padding: 15px;
+    margin: 10px 0 20px 0;
+    border: 1px solid #c9ddf2;
+    -moz-box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
+    -webkit-box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
+    box-shadow: 0 2px rgba(0, 0, 0, 0.05), 0 -2px rgba(0, 0, 0, 0.05) inset;
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    background: -moz-linear-gradient(top, #FFFFFF 0%, #F5F9FD 100%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F5F9FD)); /* webkit */
+    background: linear-gradient(top, #FFFFFF 0%, #F5F9FD 100%); /* firefox */
+}
+
+#video-wrapper p {
+    margin: 8px 0 0 0;
+}
+
+#video-player {
+    width: 640px;
+}
+
 #runfield {
     border: 1px solid #ccc;
     float: left;
@@ -225,7 +250,7 @@
 
 #firefox-performance .section#web .section-content {
     margin-right: 20px;
-    width: 240px;
+    width: 248px;
 }
 
 /* }}} */
